tests/error/comprehension_errors/multi_use3.err
Error: Copy violation (at $FILE:18:45)
   | 
16 | @guppy(module)
17 | def foo(qs: list[qubit] @owned, xs: list[int]) -> list[int]:
18 |     return [x for q in qs for x in xs if bar(q)]
   |                                              ^ Variable `q` with non-copyable type `qubit` would be
   |                                                consumed
   |                                                multiple
   |                                                times when
   |                                                evaluating
   |                                                this
   |                                                comprehension

Guppy compilation failed due to 1 previous error
